--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,7 +17,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
       - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/jenkinsLab3:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/jenkins-lab3:latest .
 
       - name: Push Docker image to Docker Hub
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/jenkinsLab3:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/jenkins-lab3:latest
